--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,10 @@
         <!-- REQUIRED by appengine-maven-plugin plugin, if web.xml does not exist for your application -->
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <!-- [END_EXCLUDE] -->
+        <endpoints.framework.version>2.1.2</endpoints.framework.version>
+        <endpoints.management.version>1.0.4</endpoints.management.version>
 
+        <endpoints.project.id>hearthstonecardbacks-215221</endpoints.project.id>
     </properties>
     <!-- [END properties] -->
 
@@ -59,6 +62,17 @@
             <artifactId>google-api-services-plus</artifactId>
             <version>v1-rev552-1.23.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.endpoints</groupId>
+            <artifactId>endpoints-framework</artifactId>
+            <version>${endpoints.framework.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.endpoints</groupId>
+            <artifactId>endpoints-management-control-appengine-all</artifactId>
+            <version>1.0.10</version>
+        </dependency>
+
     </dependencies>
 
     <prerequisites>
@@ -115,6 +129,23 @@
                 <version>1.3.1</version>
             </plugin>
             <!-- [END cloudplugin] -->
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <configuration>
+                    <!-- deploy configuration -->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>endpoints-framework-maven-plugin</artifactId>
+                <version>1.0.2</version>
+                <configuration>
+                    <!-- plugin configuration -->
+                    <hostname>${endpoints.project.id}.appspot.com</hostname>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
