--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,11 +47,11 @@
         <filter-class>com.google.api.control.extensions.appengine.GoogleAppEngineControlFilter</filter-class>
         <init-param>
             <param-name>endpoints.projectId</param-name>
-            <param-value>${endpoints.project.id}</param-value>
+            <param-value>hearthstonecardbacks-215221</param-value>
         </init-param>
         <init-param>
             <param-name>endpoints.serviceName</param-name>
-            <param-value>${endpoints.project.id}.appspot.com</param-value>
+            <param-value>hearthstonecardbacks-215221.appspot.com</param-value>
         </init-param>
     </filter>
 
